syntax = "proto3";
package DanmuGameProtocol;

enum MessageType
{
    danmaku = 0;
    gift = 1;
    guard = 2;
    superchat = 3;
}

message MainPack 
{ 
    uint32 MessageType = 1;  
    int32 UserID = 2;
    string UserName = 3;
	string UserText = 4;
}